z-index fixing

--- a/style.css
+++ b/style.css
@@ -348,14 +348,14 @@ Text Domain: core
 	.page-id-2100 .container {width: 980px;}
 	
 	/*----*****---- << Header >> ----*****----*/
-	#top-bar { z-index: 99999;position:fixed; left:490px;}
+	#top-bar { z-index: 999999999999;position:fixed; left:490px;}
 	#top-bar .holder { height: 29px; position: relative;}	#top-bar .holder > a {position: absolute; top: 0;display: block; height: 29px;}
 	a#thegmic {width:34px; left:-72px;}
 	a#gmic-beijing {left: -28px; width:120px;}
 	a#gmic-sv {left: 98px; width:176px;}
 	a.chinese {right:0; width:48px;}
 	
-	#header { position:fixed; top:29px; left:0; right:0; display:block; width:100%; margin:0px; padding:0px; z-index:9999; background:#252525; border-bottom:1px solid #171717; -moz-box-shadow:0px 2px 5px #000000; -webkit-box-shadow:0px 2px 5px #000000; box-shadow:0px 2px 5px #000000; }
+	#header { position:fixed; top:29px; left:0; right:0; display:block; width:100%; margin:0px; padding:0px; z-index:99999999; background:#252525; border-bottom:1px solid #171717; -moz-box-shadow:0px 2px 5px #000000; -webkit-box-shadow:0px 2px 5px #000000; box-shadow:0px 2px 5px #000000; }
 	#logo { float:left; margin:0px 0px 0px; padding:0px; width: 187px;}
 	#logo img { /*max-height:40px;*/ }
 	
@@ -966,7 +966,7 @@ Text Domain: core
 			bottom: -20px; 
 			left:0;
 			width: 100%;
-			z-index: 9999;
+			z-index: 999999;
 			-moz-box-shadow:    inset 0px 0px 8px #4c4c4c;
 		    -webkit-box-shadow: inset 0px 0px 8px #4c4c4c;
 		    box-shadow:         inset 0px 0px 8px #4c4c4c;
@@ -1010,7 +1010,7 @@ Text Domain: core
 			float: none;
 			clear: both;
 		}
-		img.title-tab {position: fixed; bottom: 66px; z-index: 99999; padding-left: 16px; left: 40px;}
+		img.title-tab {position: fixed; bottom: 66px; z-index: 99999999999999999; padding-left: 16px; left: 40px;}
 		
 		/*----*****---- << Layer Slider >> ----*****----*/
 		.ls-bottom-nav-wrapper a, .ls-inner a, .ls-nav-prev, .ls-nav-next { -webkit-transition:none; -moz-transition:none; -o-transition:none; -ms-transition:none; transition:none; }
@@ -1041,7 +1041,7 @@ Text Domain: core
 		#bbar-body > img { max-width:80%; }
 		
 	/*---------------------[twitter ticker slider]-------------------*/
-	#twitter-ticker.image_carousel {float:left;z-index: 9999;}
+	#twitter-ticker.image_carousel {float:left;z-index: 99999999999;}
 	#twitter-ticker.image_carousel .tweet {float: left;}
 	
 /*------------------------------------------------*/
